tests/pos/alphanumeric-infix-operator-compat/A_1_c3.0.0.scala
class A:
  def x(i: Int) = i
  infix def y(i: Int) = i
