tests/neg/override-multi-file-error/A.scala
class A:
  def foo: Int = 0

